# Dexora-VLA

./: CITATION.cff  CONTRIBUTING.md  Makefile  README.md  README_scoring_model.md  TODO.md  analyze_episode_quality.py  analyze_jerk.sh  bason_test.py  batch_sync_bson.py  batch_sync_bson_kefei.py  compute_logpi.py  debug_dataloader.py  eval.sh  eval_requirements.txt  finetune.sh  inference_scoring.py  main.py  main_posttrain.py  main_scoring.py  new_lerobot_logpi_values.json  new_lerobot_logpi_values_raw.json  plot_buggy_episodes.py  post_train.sh  pyproject.toml  replay_validate.py  requirements-dev.txt  restore_backup_bson.py  run_all_stages.sh  s2b_replay.sh  s2c_compute_logpi.sh  s2c_train_scoring.sh  test_logpi_integration.py  test_logpi_simple.py  test_scoring_model.py  train_egodex.sh  train_ours.sh  train_scoring.sh  vqvae_config.yaml  vqvae_training.py
.github/workflows/: ci.yml
1113action190/: dataset_statistics.json
1115action190_stats/: dataset_statistics.json
1115pap_actions_stats/: dataset_statistics.json
1115pap_actions_stats_full/: dataset_statistics.json
1117art_actions_stats/: dataset_statistics.json
1117ass_actions_stats/: dataset_statistics.json
1117dex_actions_stats/: dataset_statistics.json
1204art_actions_stats/: dataset_statistics.json
bson_stats_afternorm/: dataset_statistics.json
configs/: base.yaml  base_400m.yaml
configs/cross_embodiment/: ec1_franka.yaml  ec2_aloha.yaml  ec3_g1_inspire.yaml
data/: actions_full.json  bson_episodes.txt  bson_vla_dataset_frame.py  lerobot_vla_dataset.py  sync_log_20250805_232622.txt
dataprocess/: README_lerobot.md  airbot_config_final_1129.py  airbot_config_restructured_old.py  airbot_config_v2_0.py  airbot_lerobot copy.py  airbot_lerobot_restructured.py  airbot_v2_0.py  batch_convert_final_actions.py  convert_action190_to_lerobot.py  convert_final_1129_to_lerobot.py  convert_hdf5_appletobowl_to_lerobot.py  dexora_rename_mapping.txt  discriminator.py  fix_action201_episodes.py  fix_arm_action.py  fix_broken_episodes.py  fix_dexora_folder_names.py  merge_airbot_articulation.py  merge_lerobot_tasks.py  readbson.py  readme.md  readparquet.py  tasks.json
deploy/: TELEOPERATION_GUIDE.md  dagger_controller.py  dagger_controller_debug.py  dagger_controller_debug_1117.py  dagger_controller_debug_arm.py  dagger_controller_debug_init.py  dagger_controller_debug_x.py  debug.txt  mmk_forwarder.py  mmk_xhand_config.yaml  rdt_inference_zmq.py  rdt_inference_zmq_plt.py  xhand_config.yaml
lerobot/: pyproject.toml
lerobot/src/lerobot/datasets/: lerobot_dataset.py
lerobot_stats_after_norm/: dataset_statistics.json
models/: rdt_runner.py  sample_weighting.py  scoring_model.py
new_lerobot_stats/: dataset_statistics.json
pap_actions_stats/: dataset_statistics.json
ref_collect_hand/: auth_info.json  config copy.yaml  config.yaml  config_without_xhand.yaml  open_tele_vision.py  readme.md  receive_from_vision_pro.py  receiver_main_demo_open_tele_vision.py  receiver_main_demo_vision_pro_teleop.py
ref_collect_mmk/Imitate-All/: airbot_data-1.2.1-py3-none-any.whl  airbot_data-1.2.2-py3-none-any.whl  airbot_mmk2.py  check_bson.py  control_robot_bson.py  control_robot_bson_2cam.py  control_robot_bson_with_xhand.py  hand_data.txt  imgge_video_exchange.py  mmk_replay_wzr.py  replay.py  replay_arm_video.py  replay_wzr.py  show_bson.py
ref_collect_mmk/Imitate-All/configurations/basic_configs/example/robot/airbots/mmk/: airbot_com_mmk_demonstration_bson.yaml  usb_cameras.yaml
ref_collect_mmk/Imitate-All/configurations/example/: data_recording_info.json
ref_collect_mmk/Imitate-All/robots/: common.py
ref_collect_mmk/Imitate-All/robots/airbots/airbot_mmk/: airbot_com_mmk2.py  airbot_com_mmk2_bson.py  config.yaml
ref_replay/: control_from_bson.py  replay.py
reference/: meta_info.json
scripts/: analyze_episode_quality.py  compute_logpi.py  eval_action_curves.py  eval_smoothness.py  inference_scoring.py  parse_bson_structure.py  visualize_siglip_preprocess.py
teleop/: README.md
teleop/teleop_pkg/: readme.md
tests/: test_replay_validate.py
tools/: __init__.py  release_check.py
tools/data/: README.md  batch_sync_bson_break_exist.py  hf_upload_script.py  ref_fast_stat.py
train/: dataset.py  main.py  main_scoring.py  train.py  train_posttrain.py  train_scoring.py
v2_bson_stats/: dataset_statistics.json
v4_lerobot_stats/: dataset_statistics.json
v5_bson_stats/: dataset_statistics.json
v6_bson_stats/: dataset_statistics.json
